# CP

./: .gitignore  README.md  minimal_requirements.txt  pyproject.toml  quick_test.py  requirements.txt  run_on_csv.py  setup.cfg  setup.py  test.py
bayesian_changepoint_detection/: __init__.py  bayesian_models.py  device.py  generate_data.py  hazard_functions.py  offline_likelihoods.py  online_likelihoods.py  priors.py
bigquery/: getting_started_v2.ipynb
data/: 1.csv
docs/: gpu_offline_detection_guide.md.md  gpu_online_detection_guide.md
examples/: basic_usage.py  gpu_acceleration.py  multivariate_example.py  simple_example.py
tests/: __init__.py  test_device.py  test_integration.py  test_online_likelihoods.py  test_priors.py
